# langchain-example1

./: README.md  ingest_pycharm_docs.py  pyproject.toml  query_pycharm.py
src/langchainexample/: .env.example  config.py  ingest_pycharm_docs.py  query_pycharm.py
